style.css
/* ... */
.widget_text h3 span:before {
	content: "\f0f6";
}

.widget_tag_cloud h3 span:before {
	content: "\f02c";
}

.accelerate_tagcloud_widget h3 span:before {
	content: "\f02c";
}

.accelerate_tagcloud_widget h3 span:before {
	content: "\f02c";
}

.accelerate_tagcloud_widget a:before {
	content: "\f02b";
	color: #D5D5D5;
	font-family: FontAwesome;
	font-style: normal;
	font-weight: normal;
	text-decoration: inherit;
	font-size: 12px;
	padding-right: 5px;
}

.accelerate_tagcloud_widget a {
	color: #666666;
	background-color: #F8F8F8;
	margin: 0 4px 6px 0;
	padding: 3px 6px;
	display: inline-block;
	border-radius: 3px;
}

.footer-widgets-area .accelerate_tagcloud_widget a {
	background-color: #D5D5D5;
	color: #666666;
}

.footer-widgets-area .accelerate_tagcloud_widget a:before {
	color: #FFFFFF;
}

#secondary .accelerate_tagcloud_widget a:hover,
.footer-widgets-area .accelerate_tagcloud_widget a:hover {
	text-decoration: none;
	color: #FFFFFF;
	background-color: #77CC6D;
}

#secondary .widget_nav_menu h3 span:before,
.footer-widgets-area .widget_nav_menu h3 span:before {
	content: "\f0c9";
	font-size: 21px;
}

.widget_recent_entries h3 span:before {
	content: "\f040";
}

/* =FOOTER WIDGET AREA
----------------------------------------------- */
.footer-widgets-wrapper {
	background-color: #27313D;
	border-top: 1px solid #F2F2F2;
}

.footer-widgets-area {
	padding-top: 30px;
	padding-bottom: 10px;
	color: #AAAAAA;
}

.footer-widgets-area .widget-title {
	text-align: left;
}

.footer-widgets-area h3.widget-title {
	color: #FFFFFF;
}

.footer-widgets-area p {
	text-align: left;
	color: #AAAAAA;
}

.footer-widgets-area a {
	color: #FFFFFF;
}

.footer-widgets-area a:hover {
	color: #77CC6D;
}

#colophon .widget {
	padding-bottom: 25px;
}

#colophon .widget-title {
	font-size: 22px;
	line-height: 32px;
}

#colophon, #colophon p {
	font-size: 14px;
	line-height: 20px;
}

/* =FOOTER SOCKET AREA
----------------------------------------------- */
.footer-socket-wrapper {
	padding: 10px 0px;
	background-color: #F8F8F8;
	border-top: 3px solid #77CC6D;
}

.footer-socket-area {
	width: 100%;
}

.footer-socket-wrapper .copyright {
	color: #666666;
	max-width: 50%;
	float: left;
	font-size: 12px;
}

.footer-socket-wrapper .copyright a {
	color: #666666;
}

.footer-socket-wrapper .copyright a:hover {
	color: #77CC6D;
}

.footer-socket-wrapper .footer-menu {
	float: right;
}

.footer-socket-wrapper .footer-menu a {
	padding-top: 0;
}

.footer-socket-wrapper .footer-menu ul li ul {
	top: 21px;
}

/* =SCROLL UP
----------------------------------------------- */
a#scroll-up {
	bottom: 20px;
	position: fixed;
	right: 20px;
	display: none;
	background-color: #77CC6D;
	opacity: 0.5;
	filter: alpha(opacity=50); /* For IE8 and earlier */
	padding: 10px 16px;
	border-radius: 2px;
}

a#scroll-up i {
	color: #FFFFFF;
}

a#scroll-up:hover {
	opacity: 1;
	filter: alpha(opacity=100); /* For IE8 and earlier */
}

/* =PRIMARY AND SECONDARY CONTENT AREA
----------------------------------------------- */
#primary {
	float: left;
	width: 65.4546%;
}

#secondary {
	float: right;
	width: 30.909%;
}

/* =LEFT SIDEBAR CONTENT LAYOUT
-------------------------------------------------------------- */
.left-sidebar #primary {
	float: right;
}

.left-sidebar #secondary {
	float: left;
}

/* =NO SIDEBAR CONTENT LAYOUT
-------------------------------------------------------------- */
.no-sidebar #primary {
	float: none;
	margin: 0 auto;
}

.no-sidebar-full-width #primary {
	width: 100%;
}

.no-sidebar #secondary,
.no-sidebar-full-width #secondary {
	display: none;
}

.no-sidebar-full-width,
.no-sidebar,
.no-sidebar-full-width #page,
.no-sidebar #page {
	overflow: hidden;
}

/* Gutenberg Alignment */
.no-sidebar-full-width #primary .entry-content > .alignfull,
.no-sidebar #primary .entry-content > .alignfull {
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
	max-width: unset;
}

.no-sidebar-full-width #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width #primary .entry-content > .alignfull.wp-block-cover-image,
.no-sidebar #primary .entry-content > .alignfull.wp-block-cover,
.no-sidebar #primary .entry-content > .alignfull.wp-block-cover-image {
	width: unset;
}

.no-sidebar-full-width #primary .entry-content > .alignwide,
.no-sidebar #primary .entry-content > .alignwide {
	margin-left: -100px;
	margin-right: -100px;
	max-width: unset;
}

.no-sidebar-full-width.boxed #main,
.no-sidebar.boxed #main {
	overflow: hidden;
}

.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
.no-sidebar.boxed #primary .entry-content > .alignfull {
	margin-left: -30px;
	margin-right: -30px;
}

.no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover, .no-sidebar-full-width.boxed #primary .entry-content > .alignfull.wp-block-cover-image,
.no-sidebar.box #primary .entry-content > .alignfull.wp-block-cover,
.no-sidebar.box #primary .entry-content > .alignfull.wp-block-cover-image {
	width: unset;
}

.no-sidebar-full-width.boxed #primary .entry-content > .alignwide,
.no-sidebar.boxed #primary .entry-content > .alignwide {
	margin-left: -30px;
	margin-right: -30px;
	max-width: unset;
}

/* =POST CONTENT
----------------------------------------------- */
#content .post, #content .page {
	padding-bottom: 35px;
}

#content .post {
}

.single #content .post {
	padding-bottom: 25px;
}

.post .entry-title {
	font-size: 26px;
	line-height: 32px;
}

.post .entry-title a {
	color: #444444;
	transition: all 0.3s ease 0s
}

.post .entry-title a:hover {
	color: #77CC6D;
}

.post .entry-content {
	margin-bottom: 10px;
}

.entry-content ul {
	list-style: square;
}

.entry-content ul,
.entry-content ol {
	padding: 0 0 0 35px;
	margin-bottom: 30px;
}

.entry-content li > ul,
.entry-content li > ol {
	margin-bottom: 0;
}

.entry-content li {
	line-height: 1.3;
}

.post .entry-content a:hover {
	text-decoration: underline;
}
/* ... */

